@@ -1290,7 +1290,7 @@ AccessorDecls<out PropertyGetRegion getBlock, out PropertySetRegion setBlock>
 GetAccessorDecl<out PropertyGetRegion getBlock, ArrayList attributes>
 (. Statement stmt = null; .)
 =
-	ident /* "get" is not a keyword!? */
+	ident /* "get" is not a keyword */
 	(. if (t.val != "get") Error("get expected"); .)
 	( Block<out stmt> | ";" ) (. getBlock = new PropertyGetRegion((BlockStatement)stmt, attributes); .)
 .
@@ -1298,7 +1298,7 @@ GetAccessorDecl<out PropertyGetRegion getBlock, ArrayList attributes>
 SetAccessorDecl<out PropertySetRegion setBlock, ArrayList attributes>
 (. Statement stmt = null; .)
 =
-	ident /* "set" is not a keyword!? */
+	ident /* "set" is not a keyword */
 	(. if (t.val != "set") Error("set expected"); .)
 	( Block<out stmt> | ";" ) (. setBlock = new PropertySetRegion((BlockStatement)stmt, attributes); .)
 .
@@ -1377,7 +1377,7 @@ Block<out Statement stmt> /* not BlockStatement because of EmbeddedStatement */
 AddAccessorDecl<out Statement stmt>
 (.stmt = null;.) 
 =
-	/* "add" is not a keyword!? */
+	/* "add" is not a keyword */
 	ident (. if (t.val != "add") Error("add expected"); .)
 	Block<out stmt>
 .
@@ -1385,7 +1385,7 @@ AddAccessorDecl<out Statement stmt>
 RemoveAccessorDecl<out Statement stmt>
 (.stmt = null;.) 
 =
-	/* "remove" is not a keyword!? */
+	/* "remove" is not a keyword */
 	ident (. if (t.val != "remove") Error("remove expected"); .)
 	Block<out stmt>
 .
