@@ -1,24 +1,0 @@
-// project created on 28.08.2003 at 16:17
-using System;
-
-using MonoDevelop.SharpUnit;
-using MonoDevelop.SharpRefactory.PrettyPrinter;
-using MonoDevelop.SharpRefactory.Parser;
-	
-[TestSuiteAttribute()]
-class MainClass
-{
-	[TestMethodAttribute()]
-	void TestLexer1()
-	{
-//		Lexer lexer = new Lexer(new StringReader("(int)i"));
-//		lexer.NextToken();
-//		Assertion.AssertEquals(lexer.LookAhead.kind, Tokens.OpenParenthesis);
-//		lexer.NextToken();
-//		Assertion.AssertEquals(lexer.LookAhead.kind, Tokens.Int);
-//		lexer.NextToken();
-//		Assertion.AssertEquals(lexer.LookAhead.kind, Tokens.CloseParenthesis);
-//		lexer.NextToken();
-//		Assertion.AssertEquals(lexer.LookAhead.kind, Tokens.Identifier);
-	}
-}
